[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ademir_lib"
version = "0.1.0"
description = "Utils do Ademir — accessor fiscal japonês para pandas"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=1.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ademir_lib*"]
